# Vision_Artificial_Talleres

./: README.md
Taller 1/: 03_image_process_itk.cxx  03_image_process_ocv.cxx  CMakeLists.txt
Taller 2/: CMakeLists.txt  main.cxx
Taller 4/: CMakeLists.txt  taller_4.cxx
Taller cuantificacion/: 03_rescale_intensity_taller.cxx  CMakeLists.txt
Taller cuantificacion/archivos profesora/: 03_rescale_intensity_ocv.cxx  CMakeLists.txt
Taller filtrado 1/: CMakeLists.txt  filter2d.cxx  final.cxx  medianblur.cxx
Taller matematica/: CMakeLists.txt  main.cxx
Taller transformaciones/: CMakeLists.txt  main.cpp  main.cxx
Umbralizacion/: CMakeLists.txt  umbral.cxx
parcial/: CMakeLists.txt  punto9.cxx
taller 3/: CMakeLists.txt  pruebas.txt  taller_3.cxx
taller segmentacion/: main.cxx
taller segmentacion 2/: CMakeLists.txt  Morphological_Watershed.cxx  Pixels.cxx  Watershed.cxx  informacion.txt
